fixed some layout issues and implemented GET request

--- a/frontend/admin/index.css
+++ b/frontend/admin/index.css
@@ -52,7 +52,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: space-around;
+  align-items: center;
 }
 
 main {
